add yeaCard and courseCard

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -2,3 +2,6 @@
   font-family: "Marhey", sans-serif;
   /* font-family: "Vibes", system-ui; */
 }
+/* body{
+  background-color: rgb(8 12 20 / var(--tw-bg-opacity, 1));
+} */
